# hitchhiker

./: .env.example  .gitignore  Caddyfile.example  Dockerfile  README.md  SECURITY.md  THREAT_MODEL.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml
examples/: keyword_allowlist.yaml  order_status.py  order_status.yaml
scripts/: mount-encrypted-storage.sh  setup-encrypted-storage.sh  unmount-encrypted-storage.sh
src/bot/: commands.py  config.py  db.py  identity.py  loader.py  main.py  yaml_strategy.py
tests/: test_commands.py  test_encrypted_storage_scripts.sh  test_identity.py  test_integration.py  test_strategy.py  test_yaml_strategy.py
tests/e2e/: conftest.py  test_e2e.py
tests/e2e/stubs/: grist_stub.py
