[build-system]
requires = ["setuptools>=82.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hitchhiker"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "signalbot==1.1.0",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
]

[project.optional-dependencies]
test = ["pytest>=9.0", "pytest-asyncio>=1.3.0"]
e2e = ["pytest>=9.0", "pytest-asyncio>=1.3.0", "aiohttp>=3.13"]

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests with in-process stub servers"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
